// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider demo -- disabled 1`] = `
.c6 {
  position: relative;
}

.c8 {
  border: none;
  outline: none;
  padding: 0;
  color: inherit;
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
  background: #f7f7f7;
}

.c8::-webkit-input-placeholder {
  color: #abb4c3;
}

.c8::-moz-placeholder {
  color: #abb4c3;
}

.c8:-ms-input-placeholder {
  color: #abb4c3;
}

.c8::placeholder {
  color: #abb4c3;
}

.c10 {
  border: none;
  outline: none;
  padding: 0;
  color: inherit;
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c10::-webkit-input-placeholder {
  color: #abb4c3;
}

.c10::-moz-placeholder {
  color: #abb4c3;
}

.c10:-ms-input-placeholder {
  color: #abb4c3;
}

.c10::placeholder {
  color: #abb4c3;
}

.c3 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  border-color: #c3cad9;
  display: inline-block;
  vertical-align: middle;
}

.c5 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  border-color: #c3cad9;
  display: inline-block;
  vertical-align: middle;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #6b798e;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #bbb;
  border: 1px solid #c3cad9;
  padding-right: 22px;
  border-color: #d9d9d9;
}

.c1:hover {
  border-color: #4683e6;
}

.c1 .c7 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c1 .c2,
.c1 .c4 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c1 .c2:hover,
.c1 .c4:hover {
  color: #4074e1;
}

.c1 .c2 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c1 .c4 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c9 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #6b798e;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  border: 1px solid #c3cad9;
  padding-right: 22px;
}

.c9:hover {
  border-color: #4683e6;
}

.c9 .c7 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c9 .c2,
.c9 .c4 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c9 .c2:hover,
.c9 .c4:hover {
  color: #4074e1;
}

.c9 .c2 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c9 .c4 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c0 .uc-fe-slider {
  position: relative;
  width: 300px;
  border-radius: 2px;
  touch-action: none;
  margin-right: 12px;
  background: #FFF;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-slider-rail {
  box-sizing: border-box;
  position: absolute;
  width: 100%;
  border-radius: 2px;
  background: #e9e9e9;
  border: 1px solid #c3cad9;
  height: 28px;
}

.c0 .uc-fe-slider-track {
  box-sizing: border-box;
  position: absolute;
  left: 0;
  border: 1px solid #4683e6;
  border-radius: 2px;
  background: #f4f9ff;
  height: 28px;
}

.c0 .uc-fe-slider-tooltip {
  line-height: normal;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .uc-fe-slider-handle {
  box-sizing: border-box;
  position: absolute;
  margin-left: -10px;
  margin-top: -3px;
  width: 20px;
  cursor: pointer;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  text-align: center;
  border: 1px solid #c3cad9;
  background: #FFF;
  touch-action: pan-x;
  z-index: 1;
  height: 34px;
  line-height: 36px;
}

.c0 .uc-fe-slider-handle::before,
.c0 .uc-fe-slider-handle::after {
  content: '';
  display: inline-block;
  width: 1px;
  height: 16px;
  background: #dbdcdf;
  margin-top: 8px;
}

.c0 .uc-fe-slider-handle::after {
  margin-left: 4px;
}

.c0 .uc-fe-slider-handle:hover {
  border-color: rgb(107,156,235);
}

.c0 .uc-fe-slider-handle:active {
  border-color: rgb(107,156,235);
  box-shadow: 0 0 5px rgb(107,156,235);
  cursor: -webkit-grabbing;
  cursor: -moz-grabbing;
  cursor: grabbing;
}

.c0 .uc-fe-slider-handle:focus {
  border-color: rgb(107,156,235);
  box-shadow: 0 0 5px rgb(163,193,243);
  outline: none;
}

.c0 .uc-fe-slider-mark {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  font-size: 12px;
}

.c0 .uc-fe-slider-mark-text {
  position: absolute;
  display: inline-block;
  vertical-align: middle;
  text-align: right;
  cursor: pointer;
  color: #6b798e;
  border-right: 1px solid #c3cad9;
  padding: 0 8px;
  box-sizing: border-box;
  pointer-events: none;
  line-height: 28px;
}

.c0 .uc-fe-slider-mark-text-active {
  color: #4074e1;
  border-right-color: #4683e6;
}

.c0 .uc-fe-slider-step {
  position: absolute;
  width: 100%;
  background: transparent;
  height: 28px;
}

.c0 .uc-fe-slider-dot {
  display: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-slider uc-fe-slider-disabled"
      >
        <div
          class="uc-fe-slider-rail"
        />
        <div
          class="uc-fe-slider-track"
          style="left:0%;width:15%;"
        />
        <div
          class="uc-fe-slider-step"
        />
        <div
          aria-disabled="true"
          aria-valuemax="300"
          aria-valuemin="0"
          aria-valuenow="3"
          class="uc-fe-slider-handle"
          role="slider"
          style="left:15%;"
        />
        <div
          class="uc-fe-slider-mark"
        />
      </div>
      <div
        class="c1"
        disabled=""
      >
        <div>
          <span
            class="c2 c3"
            unselectable="unselectable"
          >
            <i
              class="icon__caret-up "
            />
          </span>
          <span
            class="c4 c5"
            unselectable="unselectable"
          >
            <i
              class="icon__caret-down "
            />
          </span>
        </div>
        <div
          class="c6"
        >
          <input
            autocomplete="off"
            class="c7 c8"
            disabled=""
            max="20"
            min="0"
            step="1"
            value="3"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-slider"
      >
        <div
          class="uc-fe-slider-rail"
        />
        <div
          class="uc-fe-slider-track"
          style="left:0%;width:15%;"
        />
        <div
          class="uc-fe-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="300"
          aria-valuemin="0"
          aria-valuenow="3"
          class="uc-fe-slider-handle"
          role="slider"
          style="left:15%;"
          tabindex="0"
        />
        <div
          class="uc-fe-slider-mark"
        />
      </div>
      <div
        class="c9"
      >
        <div>
          <span
            class="c2 c3"
            unselectable="unselectable"
          >
            <i
              class="icon__caret-up "
            />
          </span>
          <span
            class="c4 c5"
            unselectable="unselectable"
          >
            <i
              class="icon__caret-down "
            />
          </span>
        </div>
        <div
          class="c6"
        >
          <input
            autocomplete="off"
            class="c7 c10"
            max="20"
            min="0"
            step="1"
            value="3"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider demo -- isSensitive 1`] = `
.c6 {
  position: relative;
}

.c8 {
  border: none;
  outline: none;
  padding: 0;
  color: inherit;
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c8::-webkit-input-placeholder {
  color: #abb4c3;
}

.c8::-moz-placeholder {
  color: #abb4c3;
}

.c8:-ms-input-placeholder {
  color: #abb4c3;
}

.c8::placeholder {
  color: #abb4c3;
}

.c3 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  border-color: #c3cad9;
  display: inline-block;
  vertical-align: middle;
}

.c5 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  border-color: #c3cad9;
  display: inline-block;
  vertical-align: middle;
}

.kWResx .c7 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.kWResx .c2,
.kWResx .c4 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.kWResx .c2:hover,
.kWResx .c4:hover {
  color: #4074e1;
}

.kWResx .c2 {
  border-width: 0 0 0 1px;
  top: 0;
}

.kWResx .c4 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #6b798e;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  border: 1px solid #c3cad9;
  padding-right: 22px;
}

.c1:hover {
  border-color: #4683e6;
}

.c1 .c7 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c1 .c2,
.c1 .c4 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c1 .c2:hover,
.c1 .c4:hover {
  color: #4074e1;
}

.c1 .c2 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c1 .c4 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c0 .uc-fe-slider {
  position: relative;
  width: 300px;
  border-radius: 2px;
  touch-action: none;
  margin-right: 12px;
  background: #FFF;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-slider-rail {
  box-sizing: border-box;
  position: absolute;
  width: 100%;
  border-radius: 2px;
  background: #e9e9e9;
  border: 1px solid #c3cad9;
  height: 28px;
}

.c0 .uc-fe-slider-track {
  box-sizing: border-box;
  position: absolute;
  left: 0;
  border: 1px solid #4683e6;
  border-radius: 2px;
  background: #f4f9ff;
  height: 28px;
}

.c0 .uc-fe-slider-tooltip {
  line-height: normal;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .uc-fe-slider-handle {
  box-sizing: border-box;
  position: absolute;
  margin-left: -10px;
  margin-top: -3px;
  width: 20px;
  cursor: pointer;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  text-align: center;
  border: 1px solid #c3cad9;
  background: #FFF;
  touch-action: pan-x;
  z-index: 1;
  height: 34px;
  line-height: 36px;
}

.c0 .uc-fe-slider-handle::before,
.c0 .uc-fe-slider-handle::after {
  content: '';
  display: inline-block;
  width: 1px;
  height: 16px;
  background: #dbdcdf;
  margin-top: 8px;
}

.c0 .uc-fe-slider-handle::after {
  margin-left: 4px;
}

.c0 .uc-fe-slider-handle:hover {
  border-color: rgb(107,156,235);
}

.c0 .uc-fe-slider-handle:active {
  border-color: rgb(107,156,235);
  box-shadow: 0 0 5px rgb(107,156,235);
  cursor: -webkit-grabbing;
  cursor: -moz-grabbing;
  cursor: grabbing;
}

.c0 .uc-fe-slider-handle:focus {
  border-color: rgb(107,156,235);
  box-shadow: 0 0 5px rgb(163,193,243);
  outline: none;
}

.c0 .uc-fe-slider-mark {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  font-size: 12px;
}

.c0 .uc-fe-slider-mark-text {
  position: absolute;
  display: inline-block;
  vertical-align: middle;
  text-align: right;
  cursor: pointer;
  color: #6b798e;
  border-right: 1px solid #c3cad9;
  padding: 0 8px;
  box-sizing: border-box;
  pointer-events: none;
  line-height: 28px;
}

.c0 .uc-fe-slider-mark-text-active {
  color: #4074e1;
  border-right-color: #4683e6;
}

.c0 .uc-fe-slider-step {
  position: absolute;
  width: 100%;
  background: transparent;
  height: 28px;
}

.c0 .uc-fe-slider-dot {
  display: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-slider"
      >
        <div
          class="uc-fe-slider-rail"
        />
        <div
          class="uc-fe-slider-track"
          style="left:0%;width:15%;"
        />
        <div
          class="uc-fe-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="300"
          aria-valuemin="0"
          aria-valuenow="3"
          class="uc-fe-slider-handle"
          role="slider"
          style="left:15%;"
          tabindex="0"
        />
        <div
          class="uc-fe-slider-mark"
        />
      </div>
      <div
        class="c1"
      >
        <div>
          <span
            class="c2 c3"
            unselectable="unselectable"
          >
            <i
              class="icon__caret-up "
            />
          </span>
          <span
            class="c4 c5"
            unselectable="unselectable"
          >
            <i
              class="icon__caret-down "
            />
          </span>
        </div>
        <div
          class="c6"
        >
          <input
            autocomplete="off"
            class="c7 c8"
            max="20"
            min="0"
            step="1"
            value="3"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-slider"
      >
        <div
          class="uc-fe-slider-rail"
        />
        <div
          class="uc-fe-slider-track"
          style="left:0%;width:15%;"
        />
        <div
          class="uc-fe-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="300"
          aria-valuemin="0"
          aria-valuenow="3"
          class="uc-fe-slider-handle"
          role="slider"
          style="left:15%;"
          tabindex="0"
        />
        <div
          class="uc-fe-slider-mark"
        />
      </div>
      <div
        class="c1"
      >
        <div>
          <span
            class="c2 c3"
            unselectable="unselectable"
          >
            <i
              class="icon__caret-up "
            />
          </span>
          <span
            class="c4 c5"
            unselectable="unselectable"
          >
            <i
              class="icon__caret-down "
            />
          </span>
        </div>
        <div
          class="c6"
        >
          <input
            autocomplete="off"
            class="c7 c8"
            max="20"
            min="0"
            step="1"
            value="3"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider demo -- marks 1`] = `
.c6 {
  position: relative;
}

.c8 {
  border: none;
  outline: none;
  padding: 0;
  color: inherit;
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c8::-webkit-input-placeholder {
  color: #abb4c3;
}

.c8::-moz-placeholder {
  color: #abb4c3;
}

.c8:-ms-input-placeholder {
  color: #abb4c3;
}

.c8::placeholder {
  color: #abb4c3;
}

.c3 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  border-color: #c3cad9;
  display: inline-block;
  vertical-align: middle;
}

.c5 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  border-color: #c3cad9;
  display: inline-block;
  vertical-align: middle;
}

.kWResx .c7 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.kWResx .c2,
.kWResx .c4 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.kWResx .c2:hover,
.kWResx .c4:hover {
  color: #4074e1;
}

.kWResx .c2 {
  border-width: 0 0 0 1px;
  top: 0;
}

.kWResx .c4 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #6b798e;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  border: 1px solid #c3cad9;
  padding-right: 22px;
}

.c1:hover {
  border-color: #4683e6;
}

.c1 .c7 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c1 .c2,
.c1 .c4 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c1 .c2:hover,
.c1 .c4:hover {
  color: #4074e1;
}

.c1 .c2 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c1 .c4 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c0 .uc-fe-slider {
  position: relative;
  width: 300px;
  border-radius: 2px;
  touch-action: none;
  margin-right: 12px;
  background: #FFF;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-slider-rail {
  box-sizing: border-box;
  position: absolute;
  width: 100%;
  border-radius: 2px;
  background: #e9e9e9;
  border: 1px solid #c3cad9;
  height: 28px;
}

.c0 .uc-fe-slider-track {
  box-sizing: border-box;
  position: absolute;
  left: 0;
  border: 1px solid #4683e6;
  border-radius: 2px;
  background: #f4f9ff;
  height: 28px;
}

.c0 .uc-fe-slider-tooltip {
  line-height: normal;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .uc-fe-slider-handle {
  box-sizing: border-box;
  position: absolute;
  margin-left: -10px;
  margin-top: -3px;
  width: 20px;
  cursor: pointer;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  text-align: center;
  border: 1px solid #c3cad9;
  background: #FFF;
  touch-action: pan-x;
  z-index: 1;
  height: 34px;
  line-height: 36px;
}

.c0 .uc-fe-slider-handle::before,
.c0 .uc-fe-slider-handle::after {
  content: '';
  display: inline-block;
  width: 1px;
  height: 16px;
  background: #dbdcdf;
  margin-top: 8px;
}

.c0 .uc-fe-slider-handle::after {
  margin-left: 4px;
}

.c0 .uc-fe-slider-handle:hover {
  border-color: rgb(107,156,235);
}

.c0 .uc-fe-slider-handle:active {
  border-color: rgb(107,156,235);
  box-shadow: 0 0 5px rgb(107,156,235);
  cursor: -webkit-grabbing;
  cursor: -moz-grabbing;
  cursor: grabbing;
}

.c0 .uc-fe-slider-handle:focus {
  border-color: rgb(107,156,235);
  box-shadow: 0 0 5px rgb(163,193,243);
  outline: none;
}

.c0 .uc-fe-slider-mark {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  font-size: 12px;
}

.c0 .uc-fe-slider-mark-text {
  position: absolute;
  display: inline-block;
  vertical-align: middle;
  text-align: right;
  cursor: pointer;
  color: #6b798e;
  border-right: 1px solid #c3cad9;
  padding: 0 8px;
  box-sizing: border-box;
  pointer-events: none;
  line-height: 28px;
}

.c0 .uc-fe-slider-mark-text-active {
  color: #4074e1;
  border-right-color: #4683e6;
}

.c0 .uc-fe-slider-step {
  position: absolute;
  width: 100%;
  background: transparent;
  height: 28px;
}

.c0 .uc-fe-slider-dot {
  display: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-slider"
      >
        <div
          class="uc-fe-slider-rail"
        />
        <div
          class="uc-fe-slider-track"
          style="left:0%;width:15%;"
        />
        <div
          class="uc-fe-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="300"
          aria-valuemin="0"
          aria-valuenow="3"
          class="uc-fe-slider-handle"
          role="slider"
          style="left:15%;"
          tabindex="0"
        />
        <div
          class="uc-fe-slider-mark"
        />
      </div>
      <div
        class="c1"
      >
        <div>
          <span
            class="c2 c3"
            unselectable="unselectable"
          >
            <i
              class="icon__caret-up "
            />
          </span>
          <span
            class="c4 c5"
            unselectable="unselectable"
          >
            <i
              class="icon__caret-down "
            />
          </span>
        </div>
        <div
          class="c6"
        >
          <input
            autocomplete="off"
            class="c7 c8"
            max="20"
            min="0"
            step="1"
            value="3"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-slider uc-fe-slider-with-marks"
      >
        <div
          class="uc-fe-slider-rail"
        />
        <div
          class="uc-fe-slider-track"
          style="left:0%;width:15%;"
        />
        <div
          class="uc-fe-slider-step"
        >
          <span
            class="uc-fe-slider-dot"
            style="left:25%;"
          />
          <span
            class="uc-fe-slider-dot"
            style="left:50%;"
          />
          <span
            class="uc-fe-slider-dot"
            style="left:90%;"
          />
        </div>
        <div
          aria-disabled="false"
          aria-valuemax="300"
          aria-valuemin="0"
          aria-valuenow="3"
          class="uc-fe-slider-handle"
          role="slider"
          style="left:15%;"
          tabindex="0"
        />
        <div
          class="uc-fe-slider-mark"
        >
          <span
            class="uc-fe-slider-mark-text"
            style="width:30%;margin-left:-30%;overflow:hidden;left:25%;"
          >
            5个
          </span>
          <span
            class="uc-fe-slider-mark-text"
            style="width:30%;margin-left:-30%;overflow:hidden;left:50%;"
          >
            10个
          </span>
          <span
            class="uc-fe-slider-mark-text"
            style="width:30%;margin-left:-30%;overflow:hidden;left:90%;"
          >
            18个
          </span>
        </div>
      </div>
      <div
        class="c1"
      >
        <div>
          <span
            class="c2 c3"
            unselectable="unselectable"
          >
            <i
              class="icon__caret-up "
            />
          </span>
          <span
            class="c4 c5"
            unselectable="unselectable"
          >
            <i
              class="icon__caret-down "
            />
          </span>
        </div>
        <div
          class="c6"
        >
          <input
            autocomplete="off"
            class="c7 c8"
            max="20"
            min="0"
            step="1"
            value="3"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-slider uc-fe-slider-with-marks"
      >
        <div
          class="uc-fe-slider-rail"
        />
        <div
          class="uc-fe-slider-track"
          style="left:0%;width:0.6666666666666667%;"
        />
        <div
          class="uc-fe-slider-step"
        >
          <span
            class="uc-fe-slider-dot"
            style="left:10%;"
          />
          <span
            class="uc-fe-slider-dot"
            style="left:20%;"
          />
          <span
            class="uc-fe-slider-dot"
            style="left:35%;"
          />
          <span
            class="uc-fe-slider-dot"
            style="left:100%;"
          />
          <span
            class="uc-fe-slider-dot"
            style="left:51.24999999999999%;"
          />
        </div>
        <div
          aria-disabled="false"
          aria-valuemax="300"
          aria-valuemin="0"
          aria-valuenow="12"
          class="uc-fe-slider-handle"
          role="slider"
          style="left:0.6666666666666667%;"
          tabindex="0"
        />
        <div
          class="uc-fe-slider-mark"
        >
          <span
            class="uc-fe-slider-mark-text"
            style="width:30%;margin-left:-30%;overflow:hidden;left:10%;"
          >
            50
          </span>
          <span
            class="uc-fe-slider-mark-text"
            style="width:30%;margin-left:-30%;overflow:hidden;left:20%;"
          >
            100
          </span>
          <span
            class="uc-fe-slider-mark-text"
            style="width:30%;margin-left:-30%;overflow:hidden;left:35%;"
          >
            200
          </span>
          <span
            class="uc-fe-slider-mark-text"
            style="width:30%;margin-left:-30%;overflow:hidden;left:51.24999999999999%;"
          >
            400
          </span>
          <span
            class="uc-fe-slider-mark-text"
            style="width:30%;margin-left:-30%;overflow:hidden;left:100%;border-right:none;"
          >
            1000
          </span>
        </div>
      </div>
      <div
        class="c1"
      >
        <div>
          <span
            class="c2 c3"
            unselectable="unselectable"
          >
            <i
              class="icon__caret-up "
            />
          </span>
          <span
            class="c4 c5"
            unselectable="unselectable"
          >
            <i
              class="icon__caret-down "
            />
          </span>
        </div>
        <div
          class="c6"
        >
          <input
            autocomplete="off"
            class="c7 c8"
            max="1000"
            min="10"
            step="1"
            value="12"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider demo -- minmax 1`] = `
.c6 {
  position: relative;
}

.c8 {
  border: none;
  outline: none;
  padding: 0;
  color: inherit;
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c8::-webkit-input-placeholder {
  color: #abb4c3;
}

.c8::-moz-placeholder {
  color: #abb4c3;
}

.c8:-ms-input-placeholder {
  color: #abb4c3;
}

.c8::placeholder {
  color: #abb4c3;
}

.c3 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  border-color: #c3cad9;
  display: inline-block;
  vertical-align: middle;
}

.c5 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  border-color: #c3cad9;
  display: inline-block;
  vertical-align: middle;
}

.kWResx .c7 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.kWResx .c2,
.kWResx .c4 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.kWResx .c2:hover,
.kWResx .c4:hover {
  color: #4074e1;
}

.kWResx .c2 {
  border-width: 0 0 0 1px;
  top: 0;
}

.kWResx .c4 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #6b798e;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  border: 1px solid #c3cad9;
  padding-right: 22px;
}

.c1:hover {
  border-color: #4683e6;
}

.c1 .c7 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c1 .c2,
.c1 .c4 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c1 .c2:hover,
.c1 .c4:hover {
  color: #4074e1;
}

.c1 .c2 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c1 .c4 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c0 .uc-fe-slider {
  position: relative;
  width: 300px;
  border-radius: 2px;
  touch-action: none;
  margin-right: 12px;
  background: #FFF;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-slider-rail {
  box-sizing: border-box;
  position: absolute;
  width: 100%;
  border-radius: 2px;
  background: #e9e9e9;
  border: 1px solid #c3cad9;
  height: 28px;
}

.c0 .uc-fe-slider-track {
  box-sizing: border-box;
  position: absolute;
  left: 0;
  border: 1px solid #4683e6;
  border-radius: 2px;
  background: #f4f9ff;
  height: 28px;
}

.c0 .uc-fe-slider-tooltip {
  line-height: normal;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .uc-fe-slider-handle {
  box-sizing: border-box;
  position: absolute;
  margin-left: -10px;
  margin-top: -3px;
  width: 20px;
  cursor: pointer;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  text-align: center;
  border: 1px solid #c3cad9;
  background: #FFF;
  touch-action: pan-x;
  z-index: 1;
  height: 34px;
  line-height: 36px;
}

.c0 .uc-fe-slider-handle::before,
.c0 .uc-fe-slider-handle::after {
  content: '';
  display: inline-block;
  width: 1px;
  height: 16px;
  background: #dbdcdf;
  margin-top: 8px;
}

.c0 .uc-fe-slider-handle::after {
  margin-left: 4px;
}

.c0 .uc-fe-slider-handle:hover {
  border-color: rgb(107,156,235);
}

.c0 .uc-fe-slider-handle:active {
  border-color: rgb(107,156,235);
  box-shadow: 0 0 5px rgb(107,156,235);
  cursor: -webkit-grabbing;
  cursor: -moz-grabbing;
  cursor: grabbing;
}

.c0 .uc-fe-slider-handle:focus {
  border-color: rgb(107,156,235);
  box-shadow: 0 0 5px rgb(163,193,243);
  outline: none;
}

.c0 .uc-fe-slider-mark {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  font-size: 12px;
}

.c0 .uc-fe-slider-mark-text {
  position: absolute;
  display: inline-block;
  vertical-align: middle;
  text-align: right;
  cursor: pointer;
  color: #6b798e;
  border-right: 1px solid #c3cad9;
  padding: 0 8px;
  box-sizing: border-box;
  pointer-events: none;
  line-height: 28px;
}

.c0 .uc-fe-slider-mark-text-active {
  color: #4074e1;
  border-right-color: #4683e6;
}

.c0 .uc-fe-slider-step {
  position: absolute;
  width: 100%;
  background: transparent;
  height: 28px;
}

.c0 .uc-fe-slider-dot {
  display: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-slider"
      >
        <div
          class="uc-fe-slider-rail"
        />
        <div
          class="uc-fe-slider-track"
          style="left:0%;width:50%;"
        />
        <div
          class="uc-fe-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="300"
          aria-valuemin="0"
          aria-valuenow="15"
          class="uc-fe-slider-handle"
          role="slider"
          style="left:50%;"
          tabindex="0"
        />
        <div
          class="uc-fe-slider-mark"
        />
      </div>
      <div
        class="c1"
      >
        <div>
          <span
            class="c2 c3"
            unselectable="unselectable"
          >
            <i
              class="icon__caret-up "
            />
          </span>
          <span
            class="c4 c5"
            unselectable="unselectable"
          >
            <i
              class="icon__caret-down "
            />
          </span>
        </div>
        <div
          class="c6"
        >
          <input
            autocomplete="off"
            class="c7 c8"
            max="20"
            min="10"
            step="1"
            value="15"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-slider"
      >
        <div
          class="uc-fe-slider-rail"
        />
        <div
          class="uc-fe-slider-track"
          style="left:0%;width:50%;"
        />
        <div
          class="uc-fe-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="300"
          aria-valuemin="0"
          aria-valuenow="10"
          class="uc-fe-slider-handle"
          role="slider"
          style="left:50%;"
          tabindex="0"
        />
        <div
          class="uc-fe-slider-mark"
        />
      </div>
      <div
        class="c1"
      >
        <div>
          <span
            class="c2 c3"
            unselectable="unselectable"
          >
            <i
              class="icon__caret-up "
            />
          </span>
          <span
            class="c4 c5"
            unselectable="unselectable"
          >
            <i
              class="icon__caret-down "
            />
          </span>
        </div>
        <div
          class="c6"
        >
          <input
            autocomplete="off"
            class="c7 c8"
            max="20"
            min="0"
            step="1"
            value="10"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-slider"
      >
        <div
          class="uc-fe-slider-rail"
        />
        <div
          class="uc-fe-slider-track"
          style="left:0%;width:10%;"
        />
        <div
          class="uc-fe-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="300"
          aria-valuemin="0"
          aria-valuenow="10"
          class="uc-fe-slider-handle"
          role="slider"
          style="left:10%;"
          tabindex="0"
        />
        <div
          class="uc-fe-slider-mark"
        />
      </div>
      <div
        class="c1"
      >
        <div>
          <span
            class="c2 c3"
            unselectable="unselectable"
          >
            <i
              class="icon__caret-up "
            />
          </span>
          <span
            class="c4 c5"
            unselectable="unselectable"
          >
            <i
              class="icon__caret-down "
            />
          </span>
        </div>
        <div
          class="c6"
        >
          <input
            autocomplete="off"
            class="c7 c8"
            max="100"
            min="0"
            step="1"
            value="10"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider demo -- numberInput 1`] = `
.c6 {
  position: relative;
}

.c8 {
  border: none;
  outline: none;
  padding: 0;
  color: inherit;
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c8::-webkit-input-placeholder {
  color: #abb4c3;
}

.c8::-moz-placeholder {
  color: #abb4c3;
}

.c8:-ms-input-placeholder {
  color: #abb4c3;
}

.c8::placeholder {
  color: #abb4c3;
}

.c3 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  border-color: #c3cad9;
  display: inline-block;
  vertical-align: middle;
}

.c5 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  border-color: #c3cad9;
  display: inline-block;
  vertical-align: middle;
}

.kWResx .c7 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.kWResx .c2,
.kWResx .c4 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.kWResx .c2:hover,
.kWResx .c4:hover {
  color: #4074e1;
}

.kWResx .c2 {
  border-width: 0 0 0 1px;
  top: 0;
}

.kWResx .c4 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #6b798e;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  border: 1px solid #c3cad9;
  padding-right: 22px;
}

.c1:hover {
  border-color: #4683e6;
}

.c1 .c7 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c1 .c2,
.c1 .c4 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c1 .c2:hover,
.c1 .c4:hover {
  color: #4074e1;
}

.c1 .c2 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c1 .c4 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c0 .uc-fe-slider {
  position: relative;
  width: 300px;
  border-radius: 2px;
  touch-action: none;
  margin-right: 12px;
  background: #FFF;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-slider-rail {
  box-sizing: border-box;
  position: absolute;
  width: 100%;
  border-radius: 2px;
  background: #e9e9e9;
  border: 1px solid #c3cad9;
  height: 28px;
}

.c0 .uc-fe-slider-track {
  box-sizing: border-box;
  position: absolute;
  left: 0;
  border: 1px solid #4683e6;
  border-radius: 2px;
  background: #f4f9ff;
  height: 28px;
}

.c0 .uc-fe-slider-tooltip {
  line-height: normal;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .uc-fe-slider-handle {
  box-sizing: border-box;
  position: absolute;
  margin-left: -10px;
  margin-top: -3px;
  width: 20px;
  cursor: pointer;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  text-align: center;
  border: 1px solid #c3cad9;
  background: #FFF;
  touch-action: pan-x;
  z-index: 1;
  height: 34px;
  line-height: 36px;
}

.c0 .uc-fe-slider-handle::before,
.c0 .uc-fe-slider-handle::after {
  content: '';
  display: inline-block;
  width: 1px;
  height: 16px;
  background: #dbdcdf;
  margin-top: 8px;
}

.c0 .uc-fe-slider-handle::after {
  margin-left: 4px;
}

.c0 .uc-fe-slider-handle:hover {
  border-color: rgb(107,156,235);
}

.c0 .uc-fe-slider-handle:active {
  border-color: rgb(107,156,235);
  box-shadow: 0 0 5px rgb(107,156,235);
  cursor: -webkit-grabbing;
  cursor: -moz-grabbing;
  cursor: grabbing;
}

.c0 .uc-fe-slider-handle:focus {
  border-color: rgb(107,156,235);
  box-shadow: 0 0 5px rgb(163,193,243);
  outline: none;
}

.c0 .uc-fe-slider-mark {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  font-size: 12px;
}

.c0 .uc-fe-slider-mark-text {
  position: absolute;
  display: inline-block;
  vertical-align: middle;
  text-align: right;
  cursor: pointer;
  color: #6b798e;
  border-right: 1px solid #c3cad9;
  padding: 0 8px;
  box-sizing: border-box;
  pointer-events: none;
  line-height: 28px;
}

.c0 .uc-fe-slider-mark-text-active {
  color: #4074e1;
  border-right-color: #4683e6;
}

.c0 .uc-fe-slider-step {
  position: absolute;
  width: 100%;
  background: transparent;
  height: 28px;
}

.c0 .uc-fe-slider-dot {
  display: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-slider"
      >
        <div
          class="uc-fe-slider-rail"
        />
        <div
          class="uc-fe-slider-track"
          style="left:0%;width:5%;"
        />
        <div
          class="uc-fe-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="300"
          aria-valuemin="0"
          aria-valuenow="5"
          class="uc-fe-slider-handle"
          role="slider"
          style="left:5%;"
          tabindex="0"
        />
        <div
          class="uc-fe-slider-mark"
        />
      </div>
      <div
        class="c1"
      >
        <div>
          <span
            class="c2 c3"
            unselectable="unselectable"
          >
            <i
              class="icon__arrow-up "
            />
          </span>
          <span
            class="c4 c5"
            unselectable="unselectable"
          >
            <i
              class="icon__arrow-down "
            />
          </span>
        </div>
        <div
          class="c6"
        >
          <input
            autocomplete="off"
            class="c7 c8"
            max="100"
            min="0"
            step="1"
            value="5"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-slider"
      >
        <div
          class="uc-fe-slider-rail"
        />
        <div
          class="uc-fe-slider-track"
          style="left:0%;width:5%;"
        />
        <div
          class="uc-fe-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="300"
          aria-valuemin="0"
          aria-valuenow="5"
          class="uc-fe-slider-handle"
          role="slider"
          style="left:5%;"
          tabindex="0"
        />
        <div
          class="uc-fe-slider-mark"
        />
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-slider"
      >
        <div
          class="uc-fe-slider-rail"
        />
        <div
          class="uc-fe-slider-track"
          style="left:0%;width:10%;"
        />
        <div
          class="uc-fe-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="300"
          aria-valuemin="0"
          aria-valuenow="10"
          class="uc-fe-slider-handle"
          role="slider"
          style="left:10%;"
          tabindex="0"
        />
        <div
          class="uc-fe-slider-mark"
        />
      </div>
      <div
        class="c1"
      >
        <div>
          <span
            class="c2 c3"
            unselectable="unselectable"
          >
            <i
              class="icon__caret-up "
            />
          </span>
          <span
            class="c4 c5"
            unselectable="unselectable"
          >
            <i
              class="icon__caret-down "
            />
          </span>
        </div>
        <div
          class="c6"
        >
          <input
            autocomplete="off"
            class="c7 c8"
            max="100"
            min="0"
            step="1"
            value="10"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider demo -- numberInputTipFormatter 1`] = `
.c6 {
  position: relative;
}

.c8 {
  border: none;
  outline: none;
  padding: 0;
  color: inherit;
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c8::-webkit-input-placeholder {
  color: #abb4c3;
}

.c8::-moz-placeholder {
  color: #abb4c3;
}

.c8:-ms-input-placeholder {
  color: #abb4c3;
}

.c8::placeholder {
  color: #abb4c3;
}

.c3 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  border-color: #c3cad9;
  display: inline-block;
  vertical-align: middle;
}

.c5 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  border-color: #c3cad9;
  display: inline-block;
  vertical-align: middle;
}

.kWResx .c7 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.kWResx .c2,
.kWResx .c4 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.kWResx .c2:hover,
.kWResx .c4:hover {
  color: #4074e1;
}

.kWResx .c2 {
  border-width: 0 0 0 1px;
  top: 0;
}

.kWResx .c4 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #6b798e;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  border: 1px solid #c3cad9;
  padding-right: 22px;
}

.c1:hover {
  border-color: #4683e6;
}

.c1 .c7 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c1 .c2,
.c1 .c4 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c1 .c2:hover,
.c1 .c4:hover {
  color: #4074e1;
}

.c1 .c2 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c1 .c4 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c0 .uc-fe-slider {
  position: relative;
  width: 300px;
  border-radius: 2px;
  touch-action: none;
  margin-right: 12px;
  background: #FFF;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-slider-rail {
  box-sizing: border-box;
  position: absolute;
  width: 100%;
  border-radius: 2px;
  background: #e9e9e9;
  border: 1px solid #c3cad9;
  height: 28px;
}

.c0 .uc-fe-slider-track {
  box-sizing: border-box;
  position: absolute;
  left: 0;
  border: 1px solid #4683e6;
  border-radius: 2px;
  background: #f4f9ff;
  height: 28px;
}

.c0 .uc-fe-slider-tooltip {
  line-height: normal;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .uc-fe-slider-handle {
  box-sizing: border-box;
  position: absolute;
  margin-left: -10px;
  margin-top: -3px;
  width: 20px;
  cursor: pointer;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  text-align: center;
  border: 1px solid #c3cad9;
  background: #FFF;
  touch-action: pan-x;
  z-index: 1;
  height: 34px;
  line-height: 36px;
}

.c0 .uc-fe-slider-handle::before,
.c0 .uc-fe-slider-handle::after {
  content: '';
  display: inline-block;
  width: 1px;
  height: 16px;
  background: #dbdcdf;
  margin-top: 8px;
}

.c0 .uc-fe-slider-handle::after {
  margin-left: 4px;
}

.c0 .uc-fe-slider-handle:hover {
  border-color: rgb(107,156,235);
}

.c0 .uc-fe-slider-handle:active {
  border-color: rgb(107,156,235);
  box-shadow: 0 0 5px rgb(107,156,235);
  cursor: -webkit-grabbing;
  cursor: -moz-grabbing;
  cursor: grabbing;
}

.c0 .uc-fe-slider-handle:focus {
  border-color: rgb(107,156,235);
  box-shadow: 0 0 5px rgb(163,193,243);
  outline: none;
}

.c0 .uc-fe-slider-mark {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  font-size: 12px;
}

.c0 .uc-fe-slider-mark-text {
  position: absolute;
  display: inline-block;
  vertical-align: middle;
  text-align: right;
  cursor: pointer;
  color: #6b798e;
  border-right: 1px solid #c3cad9;
  padding: 0 8px;
  box-sizing: border-box;
  pointer-events: none;
  line-height: 28px;
}

.c0 .uc-fe-slider-mark-text-active {
  color: #4074e1;
  border-right-color: #4683e6;
}

.c0 .uc-fe-slider-step {
  position: absolute;
  width: 100%;
  background: transparent;
  height: 28px;
}

.c0 .uc-fe-slider-dot {
  display: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-slider"
      >
        <div
          class="uc-fe-slider-rail"
        />
        <div
          class="uc-fe-slider-track"
          style="left:0%;width:50%;"
        />
        <div
          class="uc-fe-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="300"
          aria-valuemin="0"
          aria-valuenow="10"
          class="uc-fe-slider-handle"
          role="slider"
          style="left:50%;"
          tabindex="0"
        />
        <div
          class="uc-fe-slider-mark"
        />
      </div>
      <div
        class="c1"
      >
        <div>
          <span
            class="c2 c3"
            unselectable="unselectable"
          >
            <i
              class="icon__caret-up "
            />
          </span>
          <span
            class="c4 c5"
            unselectable="unselectable"
          >
            <i
              class="icon__caret-down "
            />
          </span>
        </div>
        <div
          class="c6"
        >
          <input
            autocomplete="off"
            class="c7 c8"
            max="20"
            min="0"
            step="1"
            value="10"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-slider"
      >
        <div
          class="uc-fe-slider-rail"
        />
        <div
          class="uc-fe-slider-track"
          style="left:0%;width:50%;"
        />
        <div
          class="uc-fe-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="300"
          aria-valuemin="0"
          aria-valuenow="10"
          class="uc-fe-slider-handle"
          role="slider"
          style="left:50%;"
          tabindex="0"
        />
        <div
          class="uc-fe-slider-mark"
        />
      </div>
      <div
        class="c1"
      >
        <div>
          <span
            class="c2 c3"
            unselectable="unselectable"
          >
            <i
              class="icon__caret-up "
            />
          </span>
          <span
            class="c4 c5"
            unselectable="unselectable"
          >
            <i
              class="icon__caret-down "
            />
          </span>
        </div>
        <div
          class="c6"
        >
          <input
            autocomplete="off"
            class="c7 c8"
            max="20"
            min="0"
            step="1"
            value="10"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider demo -- slider 1`] = `
.c27 {
  position: relative;
}

.c29 {
  border: none;
  outline: none;
  padding: 0;
  color: inherit;
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c29::-webkit-input-placeholder {
  color: #abb4c3;
}

.c29::-moz-placeholder {
  color: #abb4c3;
}

.c29:-ms-input-placeholder {
  color: #abb4c3;
}

.c29::placeholder {
  color: #abb4c3;
}

.c24 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  border-color: #c3cad9;
  display: inline-block;
  vertical-align: middle;
}

.c26 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  border-color: #c3cad9;
  display: inline-block;
  vertical-align: middle;
}

.kWResx .c28 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.kWResx .c23,
.kWResx .c25 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.kWResx .c23:hover,
.kWResx .c25:hover {
  color: #4074e1;
}

.kWResx .c23 {
  border-width: 0 0 0 1px;
  top: 0;
}

.kWResx .c25 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c22 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #6b798e;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  border: 1px solid #c3cad9;
  padding-right: 22px;
}

.c22:hover {
  border-color: #4683e6;
}

.c22 .c28 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c22 .c23,
.c22 .c25 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c22 .c23:hover,
.c22 .c25:hover {
  color: #4074e1;
}

.c22 .c23 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c22 .c25 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c30 .uc-fe-slider {
  position: relative;
  width: 300px;
  border-radius: 2px;
  touch-action: none;
  margin-right: 12px;
  background: #FFF;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
}

.c30 .uc-fe-slider-rail {
  box-sizing: border-box;
  position: absolute;
  width: 100%;
  border-radius: 2px;
  background: #e9e9e9;
  border: 1px solid #c3cad9;
  height: 28px;
}

.c30 .uc-fe-slider-track {
  box-sizing: border-box;
  position: absolute;
  left: 0;
  border: 1px solid #4683e6;
  border-radius: 2px;
  background: #f4f9ff;
  height: 28px;
}

.c30 .uc-fe-slider-tooltip {
  line-height: normal;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c30 .uc-fe-slider-handle {
  box-sizing: border-box;
  position: absolute;
  margin-left: -10px;
  margin-top: -3px;
  width: 20px;
  cursor: pointer;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  text-align: center;
  border: 1px solid #c3cad9;
  background: #FFF;
  touch-action: pan-x;
  z-index: 1;
  height: 34px;
  line-height: 36px;
}

.c30 .uc-fe-slider-handle::before,
.c30 .uc-fe-slider-handle::after {
  content: '';
  display: inline-block;
  width: 1px;
  height: 16px;
  background: #dbdcdf;
  margin-top: 8px;
}

.c30 .uc-fe-slider-handle::after {
  margin-left: 4px;
}

.c30 .uc-fe-slider-handle:hover {
  border-color: rgb(107,156,235);
}

.c30 .uc-fe-slider-handle:active {
  border-color: rgb(107,156,235);
  box-shadow: 0 0 5px rgb(107,156,235);
  cursor: -webkit-grabbing;
  cursor: -moz-grabbing;
  cursor: grabbing;
}

.c30 .uc-fe-slider-handle:focus {
  border-color: rgb(107,156,235);
  box-shadow: 0 0 5px rgb(163,193,243);
  outline: none;
}

.c30 .uc-fe-slider-mark {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  font-size: 12px;
}

.c30 .uc-fe-slider-mark-text {
  position: absolute;
  display: inline-block;
  vertical-align: middle;
  text-align: right;
  cursor: pointer;
  color: #6b798e;
  border-right: 1px solid #c3cad9;
  padding: 0 8px;
  box-sizing: border-box;
  pointer-events: none;
  line-height: 28px;
}

.c30 .uc-fe-slider-mark-text-active {
  color: #4074e1;
  border-right-color: #4683e6;
}

.c30 .uc-fe-slider-step {
  position: absolute;
  width: 100%;
  background: transparent;
  height: 28px;
}

.c30 .uc-fe-slider-dot {
  display: none;
}

.c10 {
  margin-right: 8px;
}

.c8 {
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c11 {
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c11 .c9 {
  color: #4074e1;
}

.c6 .c7,
.c6 .style__RadioTagWrap-VWxju {
  margin-right: 8px;
}

.c6 .c7:last-child,
.c6 .style__RadioTagWrap-VWxju:last-child {
  margin-right: 0;
}

.c6 .style__RadioButtonWrap-sjeVo {
  margin-right: -1px;
}

.c6 .style__RadioButtonWrap-sjeVo:first-child {
  border-radius: 2px 0 0 2px;
}

.c6 .style__RadioButtonWrap-sjeVo:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c13 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  background: #ebedf0;
}

.c15 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c17 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c19 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c21 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  background-color: #e69b9b;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c12 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  background: #FFF;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  line-height: 16px;
}

.c12:hover {
  border-color: #4683e6;
}

.c12 .c18 {
  width: 20px;
  height: 20px;
}

.c12 .c20 {
  left: 13px;
  height: 10px;
}

.c12 .c14,
.c12 .c16 {
  line-height: 16px;
}

.c12 .c14 {
  padding-right: 20px;
}

.c12 .c16 {
  padding-left: 20px;
}

.c12 .c14 {
  display: none;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

<div>
  <form
    class="demo-form"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        size
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            class="c7 c8"
          >
            <i
              class="icon__circle c9 c10 "
            />
            sm
          </div>
          <div
            checked=""
            class="c7 c11"
          >
            <i
              class="icon__cbox-ed c9 c10 "
            />
            md
          </div>
          <div
            class="c7 c8"
          >
            <i
              class="icon__circle c9 c10 "
            />
            lg
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        disabled
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c12"
        >
          <div
            class="c13"
          >
            <span
              class="c14 c15"
            >
              ON
            </span>
            <span
              class="c16 c17"
            >
              OFF
            </span>
            <span
              class="c18 c19"
            >
              <span
                class="c20 c21"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        isSensitive
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c12"
        >
          <div
            class="c13"
          >
            <span
              class="c14 c15"
            >
              ON
            </span>
            <span
              class="c16 c17"
            >
              OFF
            </span>
            <span
              class="c18 c19"
            >
              <span
                class="c20 c21"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        hideNumberInput
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c12"
        >
          <div
            class="c13"
          >
            <span
              class="c14 c15"
            >
              ON
            </span>
            <span
              class="c16 c17"
            >
              OFF
            </span>
            <span
              class="c18 c19"
            >
              <span
                class="c20 c21"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        min
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c22"
        >
          <div>
            <span
              class="c23 c24"
              unselectable="unselectable"
            >
              <i
                class="icon__caret-up "
              />
            </span>
            <span
              class="c25 c26"
              unselectable="unselectable"
            >
              <i
                class="icon__caret-down "
              />
            </span>
          </div>
          <div
            class="c27"
          >
            <input
              autocomplete="off"
              class="c28 c29"
              min="-9007199254740991"
              step="1"
              value="0"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        max
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c22"
        >
          <div>
            <span
              class="c23 c24"
              unselectable="unselectable"
            >
              <i
                class="icon__caret-up "
              />
            </span>
            <span
              class="c25 c26"
              unselectable="unselectable"
            >
              <i
                class="icon__caret-down "
              />
            </span>
          </div>
          <div
            class="c27"
          >
            <input
              autocomplete="off"
              class="c28 c29"
              min="-9007199254740991"
              step="1"
              value="100"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        step
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c22"
        >
          <div>
            <span
              class="c23 c24"
              unselectable="unselectable"
            >
              <i
                class="icon__caret-up "
              />
            </span>
            <span
              class="c25 c26"
              unselectable="unselectable"
            >
              <i
                class="icon__caret-down "
              />
            </span>
          </div>
          <div
            class="c27"
          >
            <input
              autocomplete="off"
              class="c28 c29"
              min="0.0001"
              step="1"
              value="1"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="c30"
    >
      <div
        class="uc-fe-slider"
      >
        <div
          class="uc-fe-slider-rail"
        />
        <div
          class="uc-fe-slider-track"
          style="left:0%;width:10%;"
        />
        <div
          class="uc-fe-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="300"
          aria-valuemin="0"
          aria-valuenow="10"
          class="uc-fe-slider-handle"
          role="slider"
          style="left:10%;"
          tabindex="0"
        />
        <div
          class="uc-fe-slider-mark"
        />
      </div>
      <div
        class="c22"
      >
        <div>
          <span
            class="c23 c24"
            unselectable="unselectable"
          >
            <i
              class="icon__caret-up "
            />
          </span>
          <span
            class="c25 c26"
            unselectable="unselectable"
          >
            <i
              class="icon__caret-down "
            />
          </span>
        </div>
        <div
          class="c27"
        >
          <input
            autocomplete="off"
            class="c28 c29"
            max="100"
            min="0"
            step="1"
            value="10"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider demo -- step 1`] = `
.c6 {
  position: relative;
}

.c8 {
  border: none;
  outline: none;
  padding: 0;
  color: inherit;
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c8::-webkit-input-placeholder {
  color: #abb4c3;
}

.c8::-moz-placeholder {
  color: #abb4c3;
}

.c8:-ms-input-placeholder {
  color: #abb4c3;
}

.c8::placeholder {
  color: #abb4c3;
}

.c3 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  border-color: #c3cad9;
  display: inline-block;
  vertical-align: middle;
}

.c5 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  border-color: #c3cad9;
  display: inline-block;
  vertical-align: middle;
}

.kWResx .c7 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.kWResx .c2,
.kWResx .c4 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.kWResx .c2:hover,
.kWResx .c4:hover {
  color: #4074e1;
}

.kWResx .c2 {
  border-width: 0 0 0 1px;
  top: 0;
}

.kWResx .c4 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #6b798e;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  border: 1px solid #c3cad9;
  padding-right: 22px;
}

.c1:hover {
  border-color: #4683e6;
}

.c1 .c7 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c1 .c2,
.c1 .c4 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c1 .c2:hover,
.c1 .c4:hover {
  color: #4074e1;
}

.c1 .c2 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c1 .c4 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c0 .uc-fe-slider {
  position: relative;
  width: 300px;
  border-radius: 2px;
  touch-action: none;
  margin-right: 12px;
  background: #FFF;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-slider-rail {
  box-sizing: border-box;
  position: absolute;
  width: 100%;
  border-radius: 2px;
  background: #e9e9e9;
  border: 1px solid #c3cad9;
  height: 28px;
}

.c0 .uc-fe-slider-track {
  box-sizing: border-box;
  position: absolute;
  left: 0;
  border: 1px solid #4683e6;
  border-radius: 2px;
  background: #f4f9ff;
  height: 28px;
}

.c0 .uc-fe-slider-tooltip {
  line-height: normal;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .uc-fe-slider-handle {
  box-sizing: border-box;
  position: absolute;
  margin-left: -10px;
  margin-top: -3px;
  width: 20px;
  cursor: pointer;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  text-align: center;
  border: 1px solid #c3cad9;
  background: #FFF;
  touch-action: pan-x;
  z-index: 1;
  height: 34px;
  line-height: 36px;
}

.c0 .uc-fe-slider-handle::before,
.c0 .uc-fe-slider-handle::after {
  content: '';
  display: inline-block;
  width: 1px;
  height: 16px;
  background: #dbdcdf;
  margin-top: 8px;
}

.c0 .uc-fe-slider-handle::after {
  margin-left: 4px;
}

.c0 .uc-fe-slider-handle:hover {
  border-color: rgb(107,156,235);
}

.c0 .uc-fe-slider-handle:active {
  border-color: rgb(107,156,235);
  box-shadow: 0 0 5px rgb(107,156,235);
  cursor: -webkit-grabbing;
  cursor: -moz-grabbing;
  cursor: grabbing;
}

.c0 .uc-fe-slider-handle:focus {
  border-color: rgb(107,156,235);
  box-shadow: 0 0 5px rgb(163,193,243);
  outline: none;
}

.c0 .uc-fe-slider-mark {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  font-size: 12px;
}

.c0 .uc-fe-slider-mark-text {
  position: absolute;
  display: inline-block;
  vertical-align: middle;
  text-align: right;
  cursor: pointer;
  color: #6b798e;
  border-right: 1px solid #c3cad9;
  padding: 0 8px;
  box-sizing: border-box;
  pointer-events: none;
  line-height: 28px;
}

.c0 .uc-fe-slider-mark-text-active {
  color: #4074e1;
  border-right-color: #4683e6;
}

.c0 .uc-fe-slider-step {
  position: absolute;
  width: 100%;
  background: transparent;
  height: 28px;
}

.c0 .uc-fe-slider-dot {
  display: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-slider"
      >
        <div
          class="uc-fe-slider-rail"
        />
        <div
          class="uc-fe-slider-track"
          style="left:0%;width:15%;"
        />
        <div
          class="uc-fe-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="300"
          aria-valuemin="0"
          aria-valuenow="3"
          class="uc-fe-slider-handle"
          role="slider"
          style="left:15%;"
          tabindex="0"
        />
        <div
          class="uc-fe-slider-mark"
        />
      </div>
      <div
        class="c1"
      >
        <div>
          <span
            class="c2 c3"
            unselectable="unselectable"
          >
            <i
              class="icon__caret-up "
            />
          </span>
          <span
            class="c4 c5"
            unselectable="unselectable"
          >
            <i
              class="icon__caret-down "
            />
          </span>
        </div>
        <div
          class="c6"
        >
          <input
            autocomplete="off"
            class="c7 c8"
            max="20"
            min="0"
            step="5"
            value="3"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-slider"
      >
        <div
          class="uc-fe-slider-rail"
        />
        <div
          class="uc-fe-slider-track"
          style="left:0%;width:15%;"
        />
        <div
          class="uc-fe-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="300"
          aria-valuemin="0"
          aria-valuenow="3"
          class="uc-fe-slider-handle"
          role="slider"
          style="left:15%;"
          tabindex="0"
        />
        <div
          class="uc-fe-slider-mark"
        />
      </div>
      <div
        class="c1"
      >
        <div>
          <span
            class="c2 c3"
            unselectable="unselectable"
          >
            <i
              class="icon__caret-up "
            />
          </span>
          <span
            class="c4 c5"
            unselectable="unselectable"
          >
            <i
              class="icon__caret-down "
            />
          </span>
        </div>
        <div
          class="c6"
        >
          <input
            autocomplete="off"
            class="c7 c8"
            max="20"
            min="0"
            step="1"
            value="3"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider demo -- tipFormatter 1`] = `
.c6 {
  position: relative;
}

.c8 {
  border: none;
  outline: none;
  padding: 0;
  color: inherit;
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c8::-webkit-input-placeholder {
  color: #abb4c3;
}

.c8::-moz-placeholder {
  color: #abb4c3;
}

.c8:-ms-input-placeholder {
  color: #abb4c3;
}

.c8::placeholder {
  color: #abb4c3;
}

.c3 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  border-color: #c3cad9;
  display: inline-block;
  vertical-align: middle;
}

.c5 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  border-color: #c3cad9;
  display: inline-block;
  vertical-align: middle;
}

.kWResx .c7 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.kWResx .c2,
.kWResx .c4 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.kWResx .c2:hover,
.kWResx .c4:hover {
  color: #4074e1;
}

.kWResx .c2 {
  border-width: 0 0 0 1px;
  top: 0;
}

.kWResx .c4 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #6b798e;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  border: 1px solid #c3cad9;
  padding-right: 22px;
}

.c1:hover {
  border-color: #4683e6;
}

.c1 .c7 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c1 .c2,
.c1 .c4 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c1 .c2:hover,
.c1 .c4:hover {
  color: #4074e1;
}

.c1 .c2 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c1 .c4 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c0 .uc-fe-slider {
  position: relative;
  width: 300px;
  border-radius: 2px;
  touch-action: none;
  margin-right: 12px;
  background: #FFF;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-slider-rail {
  box-sizing: border-box;
  position: absolute;
  width: 100%;
  border-radius: 2px;
  background: #e9e9e9;
  border: 1px solid #c3cad9;
  height: 28px;
}

.c0 .uc-fe-slider-track {
  box-sizing: border-box;
  position: absolute;
  left: 0;
  border: 1px solid #4683e6;
  border-radius: 2px;
  background: #f4f9ff;
  height: 28px;
}

.c0 .uc-fe-slider-tooltip {
  line-height: normal;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .uc-fe-slider-handle {
  box-sizing: border-box;
  position: absolute;
  margin-left: -10px;
  margin-top: -3px;
  width: 20px;
  cursor: pointer;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  text-align: center;
  border: 1px solid #c3cad9;
  background: #FFF;
  touch-action: pan-x;
  z-index: 1;
  height: 34px;
  line-height: 36px;
}

.c0 .uc-fe-slider-handle::before,
.c0 .uc-fe-slider-handle::after {
  content: '';
  display: inline-block;
  width: 1px;
  height: 16px;
  background: #dbdcdf;
  margin-top: 8px;
}

.c0 .uc-fe-slider-handle::after {
  margin-left: 4px;
}

.c0 .uc-fe-slider-handle:hover {
  border-color: rgb(107,156,235);
}

.c0 .uc-fe-slider-handle:active {
  border-color: rgb(107,156,235);
  box-shadow: 0 0 5px rgb(107,156,235);
  cursor: -webkit-grabbing;
  cursor: -moz-grabbing;
  cursor: grabbing;
}

.c0 .uc-fe-slider-handle:focus {
  border-color: rgb(107,156,235);
  box-shadow: 0 0 5px rgb(163,193,243);
  outline: none;
}

.c0 .uc-fe-slider-mark {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  font-size: 12px;
}

.c0 .uc-fe-slider-mark-text {
  position: absolute;
  display: inline-block;
  vertical-align: middle;
  text-align: right;
  cursor: pointer;
  color: #6b798e;
  border-right: 1px solid #c3cad9;
  padding: 0 8px;
  box-sizing: border-box;
  pointer-events: none;
  line-height: 28px;
}

.c0 .uc-fe-slider-mark-text-active {
  color: #4074e1;
  border-right-color: #4683e6;
}

.c0 .uc-fe-slider-step {
  position: absolute;
  width: 100%;
  background: transparent;
  height: 28px;
}

.c0 .uc-fe-slider-dot {
  display: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-slider"
      >
        <div
          class="uc-fe-slider-rail"
        />
        <div
          class="uc-fe-slider-track"
          style="left:0%;width:50%;"
        />
        <div
          class="uc-fe-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="300"
          aria-valuemin="0"
          aria-valuenow="10"
          class="uc-fe-slider-handle"
          role="slider"
          style="left:50%;"
          tabindex="0"
        />
        <div
          class="uc-fe-slider-mark"
        />
      </div>
      <div
        class="c1"
      >
        <div>
          <span
            class="c2 c3"
            unselectable="unselectable"
          >
            <i
              class="icon__caret-up "
            />
          </span>
          <span
            class="c4 c5"
            unselectable="unselectable"
          >
            <i
              class="icon__caret-down "
            />
          </span>
        </div>
        <div
          class="c6"
        >
          <input
            autocomplete="off"
            class="c7 c8"
            max="20"
            min="0"
            step="1"
            value="10"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-slider"
      >
        <div
          class="uc-fe-slider-rail"
        />
        <div
          class="uc-fe-slider-track"
          style="left:0%;width:50%;"
        />
        <div
          class="uc-fe-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="300"
          aria-valuemin="0"
          aria-valuenow="10"
          class="uc-fe-slider-handle"
          role="slider"
          style="left:50%;"
          tabindex="0"
        />
        <div
          class="uc-fe-slider-mark"
        />
      </div>
      <div
        class="c1"
      >
        <div>
          <span
            class="c2 c3"
            unselectable="unselectable"
          >
            <i
              class="icon__caret-up "
            />
          </span>
          <span
            class="c4 c5"
            unselectable="unselectable"
          >
            <i
              class="icon__caret-down "
            />
          </span>
        </div>
        <div
          class="c6"
        >
          <input
            autocomplete="off"
            class="c7 c8"
            max="20"
            min="0"
            step="1"
            value="10"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider demo -- uncontrolled 1`] = `
.c6 {
  position: relative;
}

.c8 {
  border: none;
  outline: none;
  padding: 0;
  color: inherit;
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c8::-webkit-input-placeholder {
  color: #abb4c3;
}

.c8::-moz-placeholder {
  color: #abb4c3;
}

.c8:-ms-input-placeholder {
  color: #abb4c3;
}

.c8::placeholder {
  color: #abb4c3;
}

.c3 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  border-color: #c3cad9;
  display: inline-block;
  vertical-align: middle;
}

.c5 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  border-color: #c3cad9;
  display: inline-block;
  vertical-align: middle;
}

.kWResx .c7 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.kWResx .c2,
.kWResx .c4 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.kWResx .c2:hover,
.kWResx .c4:hover {
  color: #4074e1;
}

.kWResx .c2 {
  border-width: 0 0 0 1px;
  top: 0;
}

.kWResx .c4 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #6b798e;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  border: 1px solid #c3cad9;
  padding-right: 22px;
}

.c1:hover {
  border-color: #4683e6;
}

.c1 .c7 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c1 .c2,
.c1 .c4 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c1 .c2:hover,
.c1 .c4:hover {
  color: #4074e1;
}

.c1 .c2 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c1 .c4 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c0 .uc-fe-slider {
  position: relative;
  width: 300px;
  border-radius: 2px;
  touch-action: none;
  margin-right: 12px;
  background: #FFF;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-slider-rail {
  box-sizing: border-box;
  position: absolute;
  width: 100%;
  border-radius: 2px;
  background: #e9e9e9;
  border: 1px solid #c3cad9;
  height: 28px;
}

.c0 .uc-fe-slider-track {
  box-sizing: border-box;
  position: absolute;
  left: 0;
  border: 1px solid #4683e6;
  border-radius: 2px;
  background: #f4f9ff;
  height: 28px;
}

.c0 .uc-fe-slider-tooltip {
  line-height: normal;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .uc-fe-slider-handle {
  box-sizing: border-box;
  position: absolute;
  margin-left: -10px;
  margin-top: -3px;
  width: 20px;
  cursor: pointer;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  text-align: center;
  border: 1px solid #c3cad9;
  background: #FFF;
  touch-action: pan-x;
  z-index: 1;
  height: 34px;
  line-height: 36px;
}

.c0 .uc-fe-slider-handle::before,
.c0 .uc-fe-slider-handle::after {
  content: '';
  display: inline-block;
  width: 1px;
  height: 16px;
  background: #dbdcdf;
  margin-top: 8px;
}

.c0 .uc-fe-slider-handle::after {
  margin-left: 4px;
}

.c0 .uc-fe-slider-handle:hover {
  border-color: rgb(107,156,235);
}

.c0 .uc-fe-slider-handle:active {
  border-color: rgb(107,156,235);
  box-shadow: 0 0 5px rgb(107,156,235);
  cursor: -webkit-grabbing;
  cursor: -moz-grabbing;
  cursor: grabbing;
}

.c0 .uc-fe-slider-handle:focus {
  border-color: rgb(107,156,235);
  box-shadow: 0 0 5px rgb(163,193,243);
  outline: none;
}

.c0 .uc-fe-slider-mark {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  font-size: 12px;
}

.c0 .uc-fe-slider-mark-text {
  position: absolute;
  display: inline-block;
  vertical-align: middle;
  text-align: right;
  cursor: pointer;
  color: #6b798e;
  border-right: 1px solid #c3cad9;
  padding: 0 8px;
  box-sizing: border-box;
  pointer-events: none;
  line-height: 28px;
}

.c0 .uc-fe-slider-mark-text-active {
  color: #4074e1;
  border-right-color: #4683e6;
}

.c0 .uc-fe-slider-step {
  position: absolute;
  width: 100%;
  background: transparent;
  height: 28px;
}

.c0 .uc-fe-slider-dot {
  display: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-slider"
      >
        <div
          class="uc-fe-slider-rail"
        />
        <div
          class="uc-fe-slider-track"
          style="left:0%;width:25%;"
        />
        <div
          class="uc-fe-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="300"
          aria-valuemin="0"
          aria-valuenow="5"
          class="uc-fe-slider-handle"
          role="slider"
          style="left:25%;"
          tabindex="0"
        />
        <div
          class="uc-fe-slider-mark"
        />
      </div>
      <div
        class="c1"
      >
        <div>
          <span
            class="c2 c3"
            unselectable="unselectable"
          >
            <i
              class="icon__caret-up "
            />
          </span>
          <span
            class="c4 c5"
            unselectable="unselectable"
          >
            <i
              class="icon__caret-down "
            />
          </span>
        </div>
        <div
          class="c6"
        >
          <input
            autocomplete="off"
            class="c7 c8"
            max="20"
            min="0"
            step="1"
            value="5"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-slider"
      >
        <div
          class="uc-fe-slider-rail"
        />
        <div
          class="uc-fe-slider-track"
          style="left:0%;width:50%;"
        />
        <div
          class="uc-fe-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="300"
          aria-valuemin="0"
          aria-valuenow="10"
          class="uc-fe-slider-handle"
          role="slider"
          style="left:50%;"
          tabindex="0"
        />
        <div
          class="uc-fe-slider-mark"
        />
      </div>
      <div
        class="c1"
      >
        <div>
          <span
            class="c2 c3"
            unselectable="unselectable"
          >
            <i
              class="icon__caret-up "
            />
          </span>
          <span
            class="c4 c5"
            unselectable="unselectable"
          >
            <i
              class="icon__caret-down "
            />
          </span>
        </div>
        <div
          class="c6"
        >
          <input
            autocomplete="off"
            class="c7 c8"
            max="20"
            min="0"
            step="1"
            value="10"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
